# license-system

./: .gitignore  .gitmodules  LICENSE  README.md
backend/: .editorconfig  README.md  index.js  license-system.postman_collection.json  package.json
backend/src/: backend.js  config.js  cryptlib.js  database.js  enum.js  filesystem.js  rest.js  server.js
client/: CMakeLists.txt  client.sln  client.vcxproj  client.vcxproj.filters  unix.sh
client/client/: client.vcxproj  client.vcxproj.filters
client/client/contrib/: package.json
client/client/contrib/libcurl/lib/x64/: libcurl_a.lib
client/client/contrib/libcurl/lib/x86/: libcurl_a.lib
client/client/src/: main.cpp  requirements.hpp
client/client/src/auth/: hwid.cpp  hwid.hpp  validation.cpp  validation.hpp
client/client/src/crypto/: base64.cpp  base64.hpp  sealedbox.cpp  sealedbox.hpp  xorstr.hpp
client/client/src/http/: http.cpp  http.hpp  write_callbacks.hpp
client/contrib/cryptopp565/crypto++/: cryptlib.vcxproj  cryptlib.vcxproj.filters
client/contrib/tinyformat/: tinyformat.hpp
client/include/: Licenser.hpp  RSA.hpp  Socket.hpp  WMICHwid.hpp  WebEncoder.hpp  base64.hpp  stdafx.hpp
client/include/crypto/: AES.hpp  RSA.hpp  base64.hpp
client/src/: AES.cpp  Licenser.cpp  RSA.cpp  Socket.cpp  WMICHwid.cpp  WebEncoder.cpp  base64.cpp  main.cpp
web/: Config.php  Crypto.php  Database.php  Enum.php  Server.php  auth.php
